--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -368,14 +368,16 @@ h5 hr {
 
 .btn:hover {
   text-decoration: none;
-  background-color: transparent;
-  border-color: transparent;
+  /* background-color: transparent;
+  border-color: transparent; */
+  font-size: bold;
 }
 
 .btn-light:hover {
   text-decoration: none;
-  background-color: transparent;
-  border-color: transparent;
+  /* background-color: transparent;
+  border-color: transparent; */
+  font-size: bold;
 }
 
 #radioBtn .notActive{
