--- a/platforms/browser/www/css/custom.css
+++ b/platforms/browser/www/css/custom.css
@@ -1,35 +1,52 @@
-body{ 
-  
+body{
 	background-color: #FFFFFF;
 	padding-top: 80px;
 	padding-bottom: 20px;
 }
+.lmt{
+	width: 100%;
+}
+footer{
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+}
 
-.navbar-default { border-bottom: 5px solid #000000 !important;  }
+.navbar-default{
+	border-bottom: 5px solid #000000 !important;
+}
 
 .panel-transparent{
-    background: none;
+	background: none;
 }
 
 .panel-transparent .panel-body{
-    background: rgba(245, 245, 245, 0) !important;
+	background: rgba(245, 245, 245, 0) !important;
 }
 
 .panel-transparent .panel-bdmd{
-    background: rgba(245, 245, 245, 0.6) !important;
+	background: rgba(245, 245, 245, 0.6) !important;
 }
 
 .search-box {
 	position: fixed;
-	top: 80px;
+	top: 0px;
 	padding-right: 15px;
 	padding-left: 15px;
-	z-index: 99999;
+	padding-top: 15px;
+	z-index: 999997;
+}
+
+.search-box-result {
+	padding-top: 80px;
+}
+
+.button-clear-search{
+	display: none;
+	border: none;
 }
 
 .titulo-pag {
-	position: fixed;
-	top: 130px;
 	right: 15px;
 	left: 15px;
 	padding-right: 15px;
@@ -37,7 +54,6 @@ body{
 	padding-top: 10px;
 	padding-bottom: 5px;
 	vertical-align: middle;
-	z-index: 99999;
 }
 
 #ActivityIndicator{
@@ -45,12 +61,12 @@ body{
 	z-index: 9999999;
 	display: block;
 	text-align: center; 
-    bottom: 0px;
+	bottom: 0px;
 	top: 0px;
-    left: 0px;
-    right: 0px;
+	left: 0px;
+	right: 0px;
 	width: 100%;
-    height: 100%;
+	height: 100%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center center;
@@ -58,21 +74,45 @@ body{
 	background-color:rgba(0, 0, 0, 0.8);
 }
 
-#CategoriesMenu{
+#MarketPlaceMenu{
 	position: fixed;
 	z-index: 9999998;
-	/*display: none;*/
+	background-color: #fb1922;
 	bottom: 0px;
-	top: 69px;
-	/*left: 0px;*/
+	top: 0px;
 	right: 100%;
 	width: 100%;
 	height: auto;
+	min-height: 100%;
 	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+#SearchPanel{
+	position: fixed;
+	z-index: 9999996;
+	bottom: 0px;
+	top: 0px;
+	left: 100%;
+	width: 100%;
+	height: auto;
+	min-height: 100%;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .button-menu{
 	vertical-align: middle;
+}
+
+.button-search{
+	position: absolute;
+	vertical-align: middle;
+	right: 30px;
+}
+
+#button-clear-search{
+	display: none;
 }
 
 .item-menu{
@@ -89,11 +129,10 @@ body{
 	display: table-cell;
 }
 
-.vertical-center
-{
- display: table-cell;
- float: none;
- vertical-align: middle;
+.vertical-center{
+	display: table-cell;
+	float: none;
+	vertical-align: middle;
 }
 
 #spinner{
@@ -110,12 +149,12 @@ body{
 
 #backimg{
 	display: block;
-    position: fixed;
+	position: fixed;
 	top: auto;
-    bottom: 20px;
-    right: 20px;
-    margin-top: auto;
-    margin-bottom: auto;
+	bottom: 20px;
+	right: 20px;
+	margin-top: auto;
+	margin-bottom: auto;
 	z-index: 9999997;
 }
 
@@ -138,34 +177,34 @@ body{
 }
 
 @-webkit-keyframes aviao {
-    0% { left:0%; }
-    50% { left:50%; }
-    100% { left:100%; }
+  0% { left:0%; }
+  50% { left:50%; }
+  100% { left:100%; }
 }
 
 .notify-badge{
-    position: absolute;
-    left:0px;
-    bottom:20px;
-    background-color:rgba(0, 0, 0, 0.6);
-    text-align: center;
-    color:white;
-    padding:5px 10px;
-    font-size:24px;
+  position: absolute;
+  left:0px;
+  bottom:20px;
+  background-color:rgba(0, 0, 0, 0.6);
+  text-align: center;
+  color:white;
+  padding:5px 10px;
+  font-size:24px;
 }
 
 @font-face {
 	font-family: 'icomoon';
 	src:  url('fonts/icomoon.eot?nyb2r2');
 	src:  url('fonts/icomoon.eot?nyb2r2#iefix') format('embedded-opentype'),
-	  url('fonts/icomoon.ttf?nyb2r2') format('truetype'),
-	  url('fonts/icomoon.woff?nyb2r2') format('woff'),
-	  url('fonts/icomoon.svg?nyb2r2#icomoon') format('svg');
+	url('fonts/icomoon.ttf?nyb2r2') format('truetype'),
+	url('fonts/icomoon.woff?nyb2r2') format('woff'),
+	url('fonts/icomoon.svg?nyb2r2#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
-  }
+}
   
-  [class^="icon-"], [class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
 	/* use !important to prevent issues with browser extensions that change fonts */
 	font-family: 'icomoon' !important;
 	speak: none;
@@ -179,94 +218,93 @@ body{
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-  }
-  .icon-dialogue-bubble:before {
+}
+.icon-dialogue-bubble:before {
 	content: "\e911";
-  }
-  .icon-categories:before {
+}
+.icon-categories:before {
 	content: "\e910";
-  }
-  .icon-cityscape:before {
+}
+.icon-cityscape:before {
 	content: "\e900";
-  }
-  .icon-heart:before {
+}
+.icon-heart:before {
 	content: "\e901";
-  }
-  .icon-help:before {
+}
+.icon-help:before {
 	content: "\e902";
-  }
-  .icon-lines-menu:before {
+}
+.icon-lines-menu:before {
 	content: "\e903";
-  }
-  .icon-magnifying-glass:before {
+}
+.icon-magnifying-glass:before {
 	content: "\e904";
-  }
-  .icon-newsletter:before {
+}
+.icon-newsletter:before {
 	content: "\e905";
-  }
-  .icon-facebook:before {
+}
+.icon-facebook:before {
 	content: "\e906";
-  }
-  .icon-google-plus:before {
+}
+.icon-google-plus:before {
 	content: "\e907";
-  }
-  .icon-instagram:before {
+}
+.icon-instagram:before {
 	content: "\e908";
-  }
-  .icon-motorcycle:before {
+}
+.icon-motorcycle:before {
 	content: "\e909";
-  }
-  .icon-star:before {
+}
+.icon-star:before {
 	content: "\e90a";
-  }
-  .icon-twitter:before {
+}
+.icon-twitter:before {
 	content: "\e90b";
-  }
-  .icon-youtube:before {
+}
+.icon-youtube:before {
 	content: "\e90c";
-  }
-  .icon-shopping-cart:before {
+}
+.icon-shopping-cart:before {
 	content: "\e90d";
-  }
-  .icon-user:before {
+}
+.icon-user:before {
 	content: "\e90e";
-  }
-  .icon-wallet:before {
+}
+.icon-wallet:before {
 	content: "\e90f";
-  }
+}
 
-  footer .imotopecas-info {
+footer .imotopecas-info {
 	color: #000;
 	margin: 40px 0 40px 0;
 	font-size: 12px;
-  }
-  footer .imotopecas-info.mobile-only {
+}
+footer .imotopecas-info.mobile-only {
 	margin: 10px 0;
-  }
-  footer .credits {
+}
+footer .credits {
 	background-color: #fb1922;
 	color: #fff;
 	padding: 20px 0 15px 0;
 	font-size: 10px;
-  }
-  footer .credits .content {
+}
+footer .credits .content {
 	text-align: center;
-  }
-  footer .credits .prime {
+}
+footer .credits .prime {
 	text-align: center;
-  }
-  footer .credits .prime img {
+}
+footer .credits .prime img {
 	height: 24px;
 	margin-top: -4px;
-  }
+}
 
-  h5 hr {
+h5 hr {
 	margin: 7px 0 !important;
 	border: solid 2px #fb1922;
 	width: 50px;
 	border-radius: 2px;
-	}
-	
+}
 
 @-webkit-keyframes menuhomeshow {
 	0% { left:0%; }
@@ -279,3 +317,122 @@ body{
 	50% { left:50%; }
 	100% { left:0%; }
 }
+
+
+#div-filtro{
+	padding: 0 0 0 4%;
+}
+.btn{
+    padding: 0 0 0 0;
+}
+#filtro-categorias{
+	margin-left: 7%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;   
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #ff1a1a;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #ff1a1a;
+    cursor: pointer;
+}
+
+#bt-preco:hover > #seta-preco-img{
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+
+.btn:hover {
+  text-decoration: none;
+  /* background-color: transparent;
+  border-color: transparent; */
+  font-size: bold;
+}
+
+.btn-light:hover {
+  text-decoration: none;
+  /* background-color: transparent;
+  border-color: transparent; */
+  font-size: bold;
+}
+
+#radioBtn .notActive{
+    color: #b3b3b3;
+    background-color: #fff;
+}
+#radioBtn{
+    color: #b3b3b3;
+}
+
+.mktplc-red{
+	background-color: #fb1922;
+	color: #eae6e6;
+}
+
+#cat_menu{
+	padding-left: 10px;
+	padding-right: 10px;
+	width: 100%;
+	margin-left:  0;
+	margin-right:  0;
+ }
+ 
+ #cat_menu a{
+	border: 1px solid black;
+	border-radius: 30px;
+	display: inline-block;
+	margin: auto;
+	width: 80px;
+	height: 80px;
+	text-decoration: none;
+	color: black;
+ }
+ 
+ #cat_menu img{
+	margin-top: 10px;
+	width: 40px;
+	align-items: center;
+	 margin-left: auto;
+	display: block;
+	margin-right: auto;
+	height: 40px;
+ }
+ 
+ #cat_menu p{
+	font-size: 65%;
+ }
+ 
+ #carouselExampleIndicators{
+	height: 300px;
+ }
+ 
+ #carouselExampleIndicators img{
+	height: 300px;
+	width: 100%;
+ }
